final edit in eda

--- a/notebooks/eda_v1.ipynb
+++ b/notebooks/eda_v1.ipynb
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 144,
    "id": "6fabca4b",
    "metadata": {},
    "outputs": [
@@ -1378,6 +1378,12 @@
        "      <td>69.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>85%</th>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>278.000000</td>\n",
+       "      <td>76.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>90%</th>\n",
        "      <td>45.000000</td>\n",
        "      <td>285.000000</td>\n",
@@ -1415,19 +1421,20 @@
        "25%       21.000000    151.000000     40.000000\n",
        "50%       32.000000    215.000000     55.000000\n",
        "75%       40.000000    259.000000     69.000000\n",
+       "85%       43.000000    278.000000     76.000000\n",
        "90%       45.000000    285.000000     81.000000\n",
        "95%       48.000000    300.000000     88.000000\n",
        "100%      64.000000    355.000000    248.000000\n",
        "max       64.000000    355.000000    248.000000"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train.describe(percentiles=[0,.25,.50,.75,.90,.95,1])"
+    "df_train.describe(percentiles=[0,.25,.50,.75,.85,.90,.95,1])"
    ]
   },
   {
