--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Modelado\n",
     "\n",
-    "En este notebook hacemos todo el proceso de fine-tuning de los 3 modelos diferente y evaluamos su performance"
+    "En este notebook hacemos todo el proceso de fine-tuning de los 3 modelos diferente y evaluamos su performance."
    ]
   },
   {
