--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -20,11 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "id": "16faf23f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "import os\n",
     "import pandas as pd\n",
     "import torch\n",
     "import numpy as np\n",
@@ -33,10 +35,10 @@
     "from torch.utils.data import TensorDataset, DataLoader\n",
     "from torch.optim import AdamW\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification, get_scheduler\n",
-    "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix, ConfusionMatrixDisplay\n",
-    "\n",
+    "from sklearn.metrics import classification_report, accuracy_score, f1_score,confusion_matrix, ConfusionMatrixDisplay\n",
     "import joblib\n",
     "from tqdm import tqdm\n",
+    "import matplotlib.pyplot as plt\n",
     "\n"
    ]
   },
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 73,
    "id": "cacde8aa",
    "metadata": {},
    "outputs": [],
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 74,
    "id": "c7c52ec4",
    "metadata": {},
    "outputs": [
@@ -130,7 +132,7 @@
        "4  markets plunge puts pension freedoms to the te...          3"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 75,
    "id": "e1e39a4f",
    "metadata": {},
    "outputs": [
@@ -209,7 +211,7 @@
        "4  like the good new yorker i am i talked myself ...          4"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 76,
    "id": "8f780fb8",
    "metadata": {},
    "outputs": [
@@ -288,7 +290,7 @@
        "4  one week everyone buying baby milk powder the ...          2"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 77,
    "id": "ea6bea66",
    "metadata": {},
    "outputs": [],
@@ -462,7 +464,39 @@
     "\n",
     "\n",
     "## 7. Evaluación del modelo en el dataset de test\n",
-    "def evaluate_model(model,test_dataloader, device, path_encoder):\n",
+    "\n",
+    "# Función para guardar los experimentos realizados\n",
+    "def save_experiment_results(model_name, hyperparams, y_test, y_test_pred, encoder, output_path):\n",
+    "    # Calculamos métricas\n",
+    "    acc = accuracy_score(y_test, y_test_pred)\n",
+    "    f1_macro = f1_score(y_test, y_test_pred, average='macro')\n",
+    "    report = classification_report(y_test, y_test_pred, target_names=encoder.categories_[0], output_dict=True)\n",
+    "\n",
+    "    # Creamos registro del experimento\n",
+    "    experiment = {\n",
+    "        \"modelo\": model_name,\n",
+    "        \"hiperparametros\": hyperparams,\n",
+    "        \"accuracy\": round(acc, 4),\n",
+    "        \"f1_macro\": round(f1_macro, 4),\n",
+    "        \"reporte_clasificacion\": report\n",
+    "    }\n",
+    "\n",
+    "    # Guardamos en archivo .json (agrega múltiples experimentos)\n",
+    "    if os.path.exists(output_path):\n",
+    "        with open(output_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "            results = json.load(f)\n",
+    "    else:\n",
+    "        results = []\n",
+    "\n",
+    "    results.append(experiment)\n",
+    "\n",
+    "    with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(results, f, indent=4, ensure_ascii=False)\n",
+    "\n",
+    "    print(f\"### Resultados del experimento guardados en {output_path}\")\n",
+    "\n",
+    "\n",
+    "def evaluate_model(model, model_name,hyperparams, test_dataloader, device, path_encoder,output_path):\n",
     "    # Cargamos el encoder\n",
     "    encoder = joblib.load(path_encoder)\n",
     "\n",
@@ -489,19 +523,30 @@
     "    print('\\n')\n",
     "    cm = confusion_matrix(all_labels, all_preds)\n",
     "    disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=encoder.categories_[0])\n",
-    "    disp.plot(xticks_rotation=45)"
+    "    disp.plot(xticks_rotation=45)\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Guardamos métricas del experimento\n",
+    "    save_experiment_results(\n",
+    "    model_name,\n",
+    "    hyperparams,\n",
+    "    y_test=all_labels,\n",
+    "    y_test_pred=all_preds,\n",
+    "    encoder=encoder,\n",
+    "    output_path = output_path\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 78,
    "id": "8a1d94c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "##### 8. Función para ejecutar y orquestar todo el pipeline de entrenamiento\n",
     "\n",
-    "def execute_modeling_pipeline(df_train, df_val, df_test, model_name, batch_size, epochs, save_path, device):\n",
+    "def execute_modeling_pipeline(df_train, df_val, df_test, model_name,  lr, weight_decay, batch_size, epochs, save_path, device, save_model=False):\n",
     "    \n",
     "    print(f'#### Pipeline para el modelo {model_name} iniciado #### \\n')\n",
     "\n",
@@ -551,7 +596,7 @@
     "    print(\"\\n\")\n",
     "\n",
     "    # Definimos optimizer\n",
-    "    optimizer = AdamW(model.parameters(), lr=3e-6, weight_decay=1e-7)\n",
+    "    optimizer = AdamW(model.parameters(), lr=lr, weight_decay=weight_decay)\n",
     "\n",
     "\n",
     "    # Entrenamos el modelo\n",
@@ -562,9 +607,10 @@
     "    ## 6. Guardamos el modelo entrenado para posterior evaluación en dataset de test\n",
     "\n",
     "    # Guardamos el estado actual del modelo y el tokenizer\n",
-    "    save_model_tokenizer(model, tokenizer, save_path)\n",
+    "    if save_model:\n",
+    "        save_model_tokenizer(model, tokenizer, save_path)\n",
     "\n",
-    "    print(f'### Modelo finetuneado y tokenizer guardado en {save_path} ### \\n')\n",
+    "        print(f'### Modelo finetuneado y tokenizer guardado en {save_path} ### \\n')\n",
     "\n",
     "    return model, test_dataloader"
    ]
@@ -585,27 +631,20 @@
    "outputs": [],
    "source": [
     "## Definimos parámetros del modelado\n",
-    "model_name = 'bert-base-uncased'\n",
-    "batch_size = 16\n",
-    "epochs = 1\n",
-    "save_path = \"../models/bert_sentiment_analysis_model\"\n",
-    "path_encoder = '../models/ordinal_encoder.pkl'\n",
+    "hyperparams = {\n",
+    "'model_name' : 'bert-base-uncased',\n",
+    "'lr':3e-6,\n",
+    "'weight_decay':1e-7,\n",
+    "'batch_size' : 16,\n",
+    "'epochs': 1,\n",
+    "'save_path': \"../models/bert_sentiment_analysis_model\"\n",
+    "}\n",
     "\n",
     "# Seteamos uso de gpu\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "\n",
     "# Ejecutamos el pipeline de entrenamiento\n",
-    "model, test_dataloader = execute_modeling_pipeline(df_train, df_val, df_test, model_name, batch_size, epochs, save_path, device)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cc78f4a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_encoder = '../models/ordinal_encoder.pkl'\n"
+    "model, test_dataloader = execute_modeling_pipeline(df_train, df_val, df_test, *hyperparams.values(), device, save_model=True)\n"
    ]
   },
   {
@@ -616,7 +655,10 @@
    "outputs": [],
    "source": [
     "# Evaluamos el modelo BERT\n",
-    "evaluate_model(model,test_dataloader, device, path_encoder)"
+    "path_encoder= '../models/ordinal_encoder.pkl'\n",
+    "output_path = '../outputs/resultados_experimentos.json'\n",
+    "\n",
+    "evaluate_model(model,hyperparams['model_name'], hyperparams, test_dataloader, device, path_encoder,output_path)"
    ]
   },
   {
@@ -630,22 +672,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "431c26ef",
+   "id": "d14d354d",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Definimos parámetros del modelado\n",
-    "model_name = 'roberta-base'\n",
-    "batch_size = 16\n",
-    "epochs = 1\n",
-    "save_path = \"../models/roberta_sentiment_analysis_model\"\n",
-    "path_encoder = '../models/ordinal_encoder.pkl'\n",
+    "hyperparams = {\n",
+    "'model_name' : 'roberta-base',\n",
+    "'lr':3e-6,\n",
+    "'weight_decay':1e-7,\n",
+    "'batch_size' : 16,\n",
+    "'epochs': 1,\n",
+    "'save_path': \"../models/roberta_sentiment_analysis_model\"\n",
+    "}\n",
     "\n",
     "# Seteamos uso de gpu\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "\n",
     "# Ejecutamos el pipeline de entrenamiento\n",
-    "model, test_dataloader = execute_modeling_pipeline(df_train, df_val, df_test, model_name, batch_size, epochs, save_path, device)"
+    "model, test_dataloader = execute_modeling_pipeline(df_train, df_val, df_test, *hyperparams.values(), device, save_model=True)"
    ]
   },
   {
@@ -656,7 +701,7 @@
    "outputs": [],
    "source": [
     "# Evaluamos el modelo RoBERTa\n",
-    "evaluate_model(model,test_dataloader, device, path_encoder)"
+    "evaluate_model(model,hyperparams['model_name'], hyperparams, test_dataloader, device, path_encoder,output_path)"
    ]
   },
   {
@@ -670,22 +715,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32add868",
+   "id": "5ad13b88",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Definimos parámetros del modelado\n",
-    "model_name = 'distilbert-base-uncased'\n",
-    "batch_size = 16\n",
-    "epochs = 1\n",
-    "save_path = \"../models/distilbert_sentiment_analysis_model\"\n",
-    "path_encoder = '../models/ordinal_encoder.pkl'\n",
+    "hyperparams = {\n",
+    "'model_name' : 'distilbert-base-uncased',\n",
+    "'lr':3e-6,\n",
+    "'weight_decay':1e-7,\n",
+    "'batch_size' : 16,\n",
+    "'epochs': 1,\n",
+    "'save_path': \"../models/distilbert_sentiment_analysis_model\"\n",
+    "}\n",
     "\n",
     "# Seteamos uso de gpu\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "\n",
     "# Ejecutamos el pipeline de entrenamiento\n",
-    "model, test_dataloader = execute_modeling_pipeline(df_train, df_val, df_test, model_name, batch_size, epochs, save_path, device)"
+    "model, test_dataloader = execute_modeling_pipeline(df_train, df_val, df_test, *hyperparams.values(), device, save_model=True)"
    ]
   },
   {
@@ -696,7 +744,7 @@
    "outputs": [],
    "source": [
     "# Evaluamos el modelo DistilBERT\n",
-    "evaluate_model(model,test_dataloader, device, path_encoder)"
+    "evaluate_model(model,hyperparams['model_name'], hyperparams, test_dataloader, device, path_encoder,output_path)"
    ]
   }
  ],
