--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -636,7 +636,7 @@
     "'lr':3e-6,\n",
     "'weight_decay':1e-7,\n",
     "'batch_size' : 16,\n",
-    "'epochs': 1,\n",
+    "'epochs': 5,\n",
     "'save_path': \"../models/bert_sentiment_analysis_model\"\n",
     "}\n",
     "\n",
@@ -682,7 +682,7 @@
     "'lr':3e-6,\n",
     "'weight_decay':1e-7,\n",
     "'batch_size' : 16,\n",
-    "'epochs': 1,\n",
+    "'epochs': 5,\n",
     "'save_path': \"../models/roberta_sentiment_analysis_model\"\n",
     "}\n",
     "\n",
@@ -725,7 +725,7 @@
     "'lr':3e-6,\n",
     "'weight_decay':1e-7,\n",
     "'batch_size' : 16,\n",
-    "'epochs': 1,\n",
+    "'epochs': 5,\n",
     "'save_path': \"../models/distilbert_sentiment_analysis_model\"\n",
     "}\n",
     "\n",
@@ -746,6 +746,20 @@
     "# Evaluamos el modelo DistilBERT\n",
     "evaluate_model(model,hyperparams['model_name'], hyperparams, test_dataloader, device, path_encoder,output_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db732c26",
+   "metadata": {},
+   "source": [
+    "# 6. Conclusiones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1adda021",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
