bert results ready + analysis

--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -881,7 +881,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Entrenando:  12%|█▏        | 971/8232 [05:26<1:01:40,  1.96it/s]"
+      "Entrenando:  24%|██▎       | 1955/8232 [11:06<27:17,  3.83it/s]  "
      ]
     }
    ],
@@ -979,7 +979,9 @@
    "id": "51911f87",
    "metadata": {},
    "source": [
-    "- Al observar la evolución del entrenamiento del modelo en los 3 epochs diferentes, vemos que tanto el `loss` como el `accuracy` mejoran con cada iteración. Esto implica que efectivamente el modelo aprende y no entra en zona de underfitting ni overfitting."
+    "- Al observar la evolución del entrenamiento del modelo a lo largo de los tres epochs, notamos que tanto `loss` como el `accuracy` mejoran consistentemente con cada iteración. Esto es una señal clara de que el modelo está aprendiendo de manera efectiva y, de momento, no estamos experimentando un underfitting.\n",
+    "\n",
+    "- Sin embargo, hay un detalle importante a considerar: en el último epoch, el valor de pérdida en el conjunto de validación muestra un ligero aumento en comparación con el epoch anterior, mientras que el valor de pérdida en el conjunto de entrenamiento sigue disminuyendo. Esta divergencia sugiere que podríamos estar adentrándonos en una zona de overfitting. "
    ]
   },
   {
